on panther, use new panther api to only draw rects that need it. fixes splotchy whitespace with iframes when redraws span iframes (bug 222972)